Fix visibility issue in dark mode on Font Generator page

--- a/src/main/webapp/css/font-generator-v1.css
+++ b/src/main/webapp/css/font-generator-v1.css
@@ -6,3 +6,9 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
+
+@media(prefers-color-scheme: dark) {
+    .alert-info code {
+        color: #ddd;
+    }
+}
